Adding a title and heading first lesson

--- a/test.html
+++ b/test.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 
 <html>
+    <head> 
+        <title> Lesson 1 </title>
 
-<head>
+    </head>
+
+    <body>
+        <h1> Lesson 1 </h1>
+        <h2> Plan for Lesson 1 </h2>
+        
 
 
-</head>
-<body>
- hello world
+    </body>
 
-</body>
+
 
 
 
